fix icons in guest-upload reviews. Also make icons like zip and so on smaller by percent and not by rem

--- a/components/common/asset/asset-icon.module.css
+++ b/components/common/asset/asset-icon.module.css
@@ -38,5 +38,5 @@
     width: 100%;
   }
   .padding {
-    padding: 6rem;
+    padding: 30%;
   }
